--- a/package.json
+++ b/package.json
@@ -1,75 +1,28 @@
-    {
-        "name": "aa",
-        "version": "0.0.1",
+{
+        "name": "nlw",
+        "version": "1.0.0",
         "description": "",
-        "author": "",
-        "private": true,
-        "license": "UNLICENSED",
+        "main": "index.js",
         "scripts": {
-        "build": "nest build",
-        "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-        "start": "nest start",
-        "start:dev": "nest start --watch",
-        "start:debug": "nest start --debug --watch",
-        "start:prod": "node dist/main",
-        "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-        "test": "jest",
-        "test:watch": "jest --watch",
-        "test:cov": "jest --coverage",
-        "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-        "test:e2e": "jest --config ./test/jest-e2e.json"
+                "test": "echo \"Error: no test specified\" && exit 1",
+                "dev": "tsx watch ./src/server.ts"
+        },
+        "keywords": [],
+        "author": "",
+        "license": "ISC",
+        "devDependencies": {
+                "@types/node": "^20.14.10",
+                "@types/nodemailer": "^6.4.15",
+                "tsx": "^4.16.2",
+                "typescript": "^5.5.3"
         },
         "dependencies": {
-        "@nestjs/common": "^10.0.0",
-        "@nestjs/core": "^10.0.0",
-        "@nestjs/platform-express": "^10.0.0",
-        "@prisma/client": "^5.16.1",
-        "cors": "^2.8.5",
-        "express": "^4.19.2",
-        "mongodb": "^6.8.0",
-        "reflect-metadata": "^0.2.0",
-        "rxjs": "^7.8.1"
-        },
-        "devDependencies": {
-        "@nestjs/cli": "^10.0.0",
-        "@nestjs/schematics": "^10.0.0",
-        "@nestjs/testing": "^10.0.0",
-        "@types/express": "^4.17.17",
-        "@types/jest": "^29.5.2",
-        "@types/node": "^20.3.1",
-        "@types/supertest": "^6.0.0",
-        "@typescript-eslint/eslint-plugin": "^7.0.0",
-        "@typescript-eslint/parser": "^7.0.0",
-        "eslint": "^8.42.0",
-        "eslint-config-prettier": "^9.0.0",
-        "eslint-plugin-prettier": "^5.0.0",
-        "jest": "^29.5.0",
-        "prettier": "^3.0.0",
-        "prisma": "^5.16.1",
-        "source-map-support": "^0.5.21",
-        "supertest": "^7.0.0",
-        "ts-jest": "^29.1.0",
-        "ts-loader": "^9.4.3",
-        "ts-node": "^10.9.1",
-        "tsconfig-paths": "^4.2.0",
-        "typescript": "^5.1.3"
-        },
-        "jest": {
-        "moduleFileExtensions": [
-            "js",
-            "json",
-            "ts"
-        ],
-        "rootDir": "src",
-        "testRegex": ".*\\.spec\\.ts$",
-        "transform": {
-            "^.+\\.(t|j)s$": "ts-jest"
-        },
-        "collectCoverageFrom": [
-            "**/*.(t|j)s"
-        ],
-        "coverageDirectory": "../coverage",
-        "testEnvironment": "node"
+                "@fastify/cors": "^9.0.1",
+                "@prisma/client": "^5.16.2",
+                "dayjs": "^1.11.11",
+                "fastify": "^4.28.1",
+                "fastify-type-provider-zod": "^2.0.0",
+                "nodemailer": "^6.9.14",
+                "zod": "^3.23.8"
         }
-    }
-    
+}
