--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20.x
+      
+      - name: Install Yarn
+        run: |
+          npm install yarn
 
       - name: Install dependencies
         run: |
