--- a/package.json
+++ b/package.json
@@ -1,28 +1,51 @@
 {
-        "name": "nlw",
-        "version": "1.0.0",
-        "description": "",
-        "main": "index.js",
-        "scripts": {
-                "test": "echo \"Error: no test specified\" && exit 1",
-                "dev": "tsx watch ./src/server.ts"
-        },
-        "keywords": [],
-        "author": "",
-        "license": "ISC",
-        "devDependencies": {
-                "@types/node": "^22.0.0",
-                "@types/nodemailer": "^6.4.15",
-                "tsx": "^4.16.2",
-                "typescript": "^5.5.3"
-        },
-        "dependencies": {
-                "@fastify/cors": "^9.0.1",
-                "@prisma/client": "^5.16.2",
-                "dayjs": "^1.11.11",
-                "fastify": "^4.28.1",
-                "fastify-type-provider-zod": "^2.0.0",
-                "nodemailer": "^6.9.14",
-                "zod": "^3.23.8"
-        }
+  "name": "nlw",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "tsx watch ./src/server.ts"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "@types/node": "^22.0.0",
+    "@types/nodemailer": "^6.4.15",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.3",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.16.2",
+    "typescript": "^5.5.3"
+  },
+  "dependencies": {
+    "@fastify/cors": "^9.0.1",
+    "@prisma/client": "^5.16.2",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "@typescript-eslint/parser": "^6.19.1",
+    "dayjs": "^1.11.11",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard-with-typescript": "^43.0.1",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-import-helpers": "^1.3.1",
+    "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
+    "eslint-plugin-perfectionist": "^2.5.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.34.4",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-svg-jsx": "^1.2.2",
+    "eslint-plugin-unused-imports": "^3.0.0",
+    "fastify": "^4.28.1",
+    "fastify-cors": "^6.1.0",
+    "fastify-type-provider-zod": "^2.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.14",
+    "zod": "^3.23.8"
+  }
 }
