--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "typescript": "^5.5.3"
   },
   "dependencies": {
+    "@fastify/cookie": "^9.4.0",
     "@fastify/cors": "^9.0.1",
-    "@prisma/client": "^5.18.0",
+    "@fastify/jwt": "^8.0.1",
+    "@prisma/client": "^5.19.1",
     "@types/jsonwebtoken": "^9.0.6",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@typescript-eslint/parser": "^6.19.1",
@@ -46,6 +48,7 @@
     "fastify-type-provider-zod": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.14",
+    "prisma": "^5.19.1",
     "zod": "^3.23.8"
   }
 }
